# sonic-cuda

./: CMakeLists.txt  README.md
sonic-cuda/core/: sonic.cu  sonic.h  sonic_clean.cu  sonic_clean.h  sonic_clean_v2.cu  sonic_clean_v2.h  sonic_localization.cu  sonic_localization.h  sonic_roi.cu  sonic_roi.h
sonic-cuda/mex/: sonic_cuda.cpp
test/: test_sonic.cu  test_sonic_clean.cu  test_sonic_localization.cu  test_sonic_roi.cu  utils.cpp  utils.h
